--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-ratings": "^6.5.0",
+    "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.10",
+    "react-native-shadow": "^1.2.2",
+    "react-native-svg": "^11.0.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1"
+    "react-navigation-stack": "^2.1.1",
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
