--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/slider": "^2.0.8",
     "expo": "~36.0.0",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -21,11 +22,14 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.10",
     "react-native-shadow": "^1.2.2",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^11.0.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
